--- a/docs/study/三江/血缘.md
+++ b/docs/study/三江/血缘.md
@@ -91,3 +91,75 @@ left join r_transformation rt on rt."ID_TRANSFORMATION" = rth."ID_TRANSFORMATION
 
 ```
 
+
+
+
+
+```
+with RECURSIVE cte as (
+
+	SELECT
+					"ID_DIRECTORY"
+					,"ID_DIRECTORY_PARENT"
+					,"DIRECTORY_NAME"::varchar
+	from r_directory
+	where "ID_DIRECTORY_PARENT" = 0
+
+	union all
+
+	SELECT
+					k."ID_DIRECTORY"
+					,k."ID_DIRECTORY_PARENT"
+					,(c."DIRECTORY_NAME"||'/'||k."DIRECTORY_NAME") as DIRECTORY_NAME
+	from r_directory k
+	INNER JOIN cte c on c."ID_DIRECTORY" = k."ID_DIRECTORY_PARENT"
+
+),f1 as (
+		SELECT
+				"ID_DIRECTORY"
+				,"DIRECTORY_NAME"
+		FROM cte
+		order by 1
+)
+
+
+
+select
+        rjc."ID_JOBENTRY_COPY"
+        ,rjc."ID_JOBENTRY"
+        ,rjc."ID_JOB"
+        ,rjc."ID_JOBENTRY_TYPE"
+        ,rj."NAME"      -- 作业转换显示名称
+
+--         ,rjh."ID_JOBENTRY_COPY_FROM"
+--         ,rjh."ENABLED"
+--         ,rjh."UNCONDITIONAL"
+
+       ,rja."VALUE_STR"   --转换名称
+        ,r."NAME"
+      --  ,r."ID_DIRECTORY"
+        ,f1."DIRECTORY_NAME"
+
+        ,rt."ID_TRANSFORMATION"
+
+
+from  r_jobentry_copy rjc
+left join r_jobentry rj on rjc."ID_JOB" = rj."ID_JOB" and rjc."ID_JOBENTRY" = rj."ID_JOBENTRY"
+-- left join r_job_hop rjh on rj."ID_JOB" = rjh."ID_JOB" and rjh."ID_JOBENTRY_COPY_TO" = rjc."ID_JOBENTRY_COPY"
+left join r_jobentry_attribute rja on rja."ID_JOB"  = rj."ID_JOB"  and rjc."ID_JOBENTRY" = rja."ID_JOBENTRY" and rja."CODE" in ('name')
+left join r_job r on rj."ID_JOB" = r."ID_JOB"
+left join f1 on f1."ID_DIRECTORY" = r."ID_DIRECTORY"
+
+left join r_transformation rt on f1."ID_DIRECTORY" = rt."ID_DIRECTORY"  and rja."VALUE_STR" = rt."NAME"
+
+
+
+
+--where r."NAME"  = 'SD0606一条龙'
+where r."NAME"  = '整合'
+
+order by  rjc."ID_JOB","ID_JOBENTRY_TYPE"
+
+
+```
+
